# minidb

./: Cargo.toml  OPTIMIZING.md  README.md  database-engine-rust-lernplan.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/models/: command.rs
minidb-engine/: BUILD_FOR_NEXTJS.md  Cargo.toml  example-usage.js
minidb-engine/src/: lib.rs  lib_tests.rs  wasm.rs
minidb-engine/src/models/: mod.rs
src/: bplustree.rs  main.rs
src/btree/: mod.rs
visualization/: Cargo.toml
visualization/src/: main.rs
visualization/src/models/: row.rs
