[package]
name = "minidb-engine"
version = "0.1.0"
edition = "2021"
description = "minimalistic database engine"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "*", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
